# qd-alpha-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: sample_prices.csv
outputs/csv_backtest/: daily_returns.csv  metrics.json  positions.csv  report.md
outputs/demo/: benchmark_equity_curve.csv  benchmark_returns.csv  daily_returns.csv  drawdown_series.csv  equity_curve.csv  metrics.json  positions.csv  report.md  rolling_sharpe.csv
outputs/demo_v2/: daily_returns.csv  metrics.json  positions.csv  report.md
outputs/research/: research_summary.md  strategy_sweep.csv
outputs/walkforward/: metrics.json  walkforward_returns.csv  walkforward_splits.csv
src/qd_alpha_lab/: __init__.py  backtest.py  cli.py  dashboard.py  data.py  metrics.py  report.py  research.py  signals.py  strategy.py  walkforward.py
tests/: test_backtest.py  test_data.py  test_metrics.py  test_research.py  test_strategy.py  test_walkforward.py
