[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qd-alpha-lab"
version = "0.1.0"
description = "A self-contained quantitative research and backtesting project for resume use."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "s0m0zg3" }
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.40"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
